--- a/haeyo/.settings/org.eclipse.wst.common.component
+++ b/haeyo/.settings/org.eclipse.wst.common.component
@@ -35,7 +35,7 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="web"/>
+        <property name="context-root" value="project"/>
                                         	
     
     
