--- a/haeyo/src/main/webapp/resources/css/join.css
+++ b/haeyo/src/main/webapp/resources/css/join.css
@@ -298,3 +298,83 @@ table {
 	height: 30px;
 	border: 1px solid #e2e2e2;
 }
+/*------ Email인증 -------*/
+.mail_input {
+	font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+	margin-top: 9px;
+	padding: 15px;
+	width: 450px;
+	height: 45px;
+	box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+}
+
+.mail_check_wrap {
+	margin-top: 20px;
+}
+
+.mail_check_input_box {
+	box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+	margin-top: 9px;
+	width: 350px;
+	margin-right: 10px;
+	margin-bottom: 9px;
+	border: 1px solid black;
+	height: 45px;
+	float: left;
+	line-height: 1.42857143;
+	background-color: #fff;
+    background-image: none;
+    border-radius: 4px;
+}
+
+#mail_check_input_box_false {
+	background-color: #ebebe4;
+}
+
+#mail_check_input_box_true {
+	background-color: white;
+}
+
+.mail_check_input {
+    padding: 15px;
+	width: 100%;
+	height: 100%;
+	border: none;
+	font-size: 14px;
+}
+
+.mail_check_button {
+	font-family: 'Noto Sans KR', sans-serif;
+	font-size: 14px;
+	width: 90px;
+	border-radius: 3px;
+	border: 1px solid #05C3A7;
+	background-color: #05C3A7;
+	color: #fff;
+	height: 45px;
+	margin-top: 9px;
+	float: left;
+	line-height: 50px;
+	cursor: pointer;
+	text-align: center;
+}
+
+.mail_check_button:hover {
+	border: 1px solid #05C3A7;
+	background-color: #fff;
+	color: #05C3A7;
+}
+
+.correct {
+	color: green;
+}
+
+.incorrect {
+	color: red;
+}
